// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`standard-pagination-component default snapshot with first/prev/next/last (text goToButtons) 1`] = `
<standard-pagination-component current-page="3" page-size="10">
  <div class="d-flex pagination-layout">
    <div aria-atomic="true" aria-live="polite" class="pagination-cell row-display sr-only" id="spc-range-spc-adea09266ec17-19d218c5349" role="status">
      21-30 of 90
    </div>
    <div class="center pagination-cell">
      <nav aria-label="Pagination">
        <ul aria-describedby="spc-range-spc-adea09266ec17-19d218c5349" class="b-pagination flex-fill50 justify-content-center pagination">
          <li class="page-item" role="listitem">
            <button aria-label="Go to first page" class="page-link" tabindex="0" type="button">
              First
            </button>
          </li>
          <li class="page-item" role="listitem">
            <button aria-label="Go to previous page" class="page-link" tabindex="0" type="button">
              Prev
            </button>
          </li>
          <li class="page-item" role="listitem">
            <button aria-label="Go to page 1" class="page-link" tabindex="0" type="button">
              1
            </button>
          </li>
          <li class="page-item" role="listitem">
            <button aria-label="Go to page 2" class="page-link" tabindex="0" type="button">
              2
            </button>
          </li>
          <li class="active page-item" role="listitem">
            <button aria-current="page" aria-disabled="true" aria-label="Current page, page 3" class="page-link" disabled="" tabindex="0" type="button">
              3
            </button>
          </li>
          <li class="page-item" role="listitem">
            <button aria-label="Go to page 4" class="page-link" tabindex="0" type="button">
              4
            </button>
          </li>
          <li class="page-item" role="listitem">
            <button aria-label="Go to page 5" class="page-link" tabindex="0" type="button">
              5
            </button>
          </li>
          <li aria-hidden="true" class="bv-d-xs-down-none disabled page-item">
            <span class="page-link">
              …
            </span>
          </li>
          <li class="page-item" role="listitem">
            <button aria-label="Go to page 9" class="page-link" tabindex="0" type="button">
              9
            </button>
          </li>
          <li class="page-item" role="listitem">
            <button aria-label="Go to next page" class="page-link" tabindex="0" type="button">
              Next
            </button>
          </li>
          <li class="page-item" role="listitem">
            <button aria-label="Go to last page" class="page-link" tabindex="0" type="button">
              Last
            </button>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</standard-pagination-component>
`;

exports[`standard-pagination-component hideGoToButtons removes first/prev/next/last controls 1`] = `
<standard-pagination-component current-page="2" page-size="10">
  <div class="d-flex pagination-layout">
    <div aria-atomic="true" aria-live="polite" class="pagination-cell row-display sr-only" id="spc-range-spc-ef58aaba1c349-19d218c5355" role="status">
      11-20 of 50
    </div>
    <div>
      <nav aria-label="Pagination">
        <ul aria-describedby="spc-range-spc-ef58aaba1c349-19d218c5355" class="b-pagination pagination">
          <li class="page-item" role="listitem">
            <button aria-label="Go to page 1" class="page-link" tabindex="0" type="button">
              1
            </button>
          </li>
          <li class="active page-item" role="listitem">
            <button aria-current="page" aria-disabled="true" aria-label="Current page, page 2" class="page-link" disabled="" tabindex="0" type="button">
              2
            </button>
          </li>
          <li class="page-item" role="listitem">
            <button aria-label="Go to page 3" class="page-link" tabindex="0" type="button">
              3
            </button>
          </li>
          <li class="page-item" role="listitem">
            <button aria-label="Go to page 4" class="page-link" tabindex="0" type="button">
              4
            </button>
          </li>
          <li class="page-item" role="listitem">
            <button aria-label="Go to page 5" class="page-link" tabindex="0" type="button">
              5
            </button>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</standard-pagination-component>
`;
